--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "4.3.1"
-serde_json = "1"
-log = "0.4.0"
-env_logger = "0.10.0"
+actix-web = "4.5.1"
+serde_json = "1.0.114"
+log = "0.4.21"
+env_logger = "0.11.2"
 dotenv = "0.15.0"
 teloxide = "0.12.2"
-surrealdb = "1.0.0-beta.9"
-serde = { version = "1.0.160", features = ["derive"] }
-anyhow = "1.0.71"
-thiserror = "1.0.40"
+surrealdb = "1.2.0"
+serde = { version = "1.0.197", features = ["derive"] }
+anyhow = "1.0.80"
+thiserror = "1.0.57"
